<resources>
    <string name="app_name">TravelDiary</string>
    <string name="new_note_text">Add new travel note</string>
    <string name="visit_again">Visit again</string>
    <string name="note_image_description">Picture of travel note</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="note_address">Address</string>
    <string name="note_date">Date</string>
    <string name="confirm">Create</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_note_image_text">Image:</string>
    <string name="url_button_text">URL</string>
    <string name="edit">Edit</string>
</resources>
