<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:id="@+id/new_note_inputs_layout">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_note_title"
            android:hint="@string/note_title"
            android:layout_weight="1"/>


        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_note_visit"
            android:text="@string/visit_again"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_note_description"
            android:hint="@string/note_description"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_note_address"
            android:hint="@string/note_address"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_note_date"
            android:onClick="addDateEvent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_note_image_text"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/new_note_buttons_height"
            android:text="@string/url_button_text"
            android:id="@+id/URL_button"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/new_note_buttons_height"
            android:id="@+id/gallery_imageButton"
            android:src="@drawable/gallery_vector_black_24dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/new_note_buttons_height"
            android:id="@+id/photo_imageButton"
            android:src="@drawable/photo_black_24dp"/>


    </LinearLayout>

</LinearLayout>

</LinearLayout>